--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
-          <h1 id="title" class="text-uppercase"> <strong>The biggest startup event of the year</strong></h1>
+          <h1 id="title" class="text-uppercase">
+            <strong>The biggest startup event of the year</strong>
+          </h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
-          <hr>
-          <button class="btn btn-primary btn-xl">Find out more</button>
+          <hr />
+          <a href="https://mailchi.mp/147262018237/startup-page">
+            <button class="btn btn-primary btn-xl">Find out more</button>
+          </a>
         </section>
       </div>
     </div>
